<resources>
    <string name="app_name">COMERCIALIZADORA GREMLINS</string>
    <string name="title_session">INICIAR SESIÓN</string>
    <string name="title_ingreso">INGRESAR</string>
    <string name="title_admin">ADMINISTRADOR</string>
    <string name="title_manager">GERENTE</string>
    <string name="title_carrier">TRANSPORTADOR</string>
    <string name="title_ware_house">EMPACADOR</string>
    <string name="title_reception">RECEPCIONISTA</string>
    <string name="title_client">CLIENTE</string>
    <string name="title_provider">PROVEEDOR</string>
    <string name="title_app_packs">ALISTAMIENTO DE PAQUETES</string>
    <string name="number_packs">10</string>
    <string name="number_packs_earrings">15</string>
    <string name="title_number_packs">Paquetes en alistamiento</string>
    <string name="title_number_packs_earrings">Paquetes pendientes</string>
    <string name="title_accept">Aceptados</string>
    <string name="title_cancel">Cancelados</string>
    <string name="title_changed">Cambiados</string>
    <string name="number_accept">5</string>
    <string name="number_cancel">5</string>
    <string name="number_changed">5</string>
    <string name="title_report_clients">Clientes</string>
    <string name="title_report_provider">Proveedores</string>
    <string name="num_report_clients">20</string>
    <string name="num_report_provider">20</string>
    <string name="title_comunicate_recepcion">Comunicar con recepcion</string>
    <string name="title_add">Agregar</string>
    <string name="title_name">Nombre: </string>
    <string name="title_lastname">Apellido: </string>
    <string name="title_document">Documento: </string>
    <string name="title_phone">Telefono: </string>
    <string name="title_address">Direccion: </string>
    <string name="title_email">Correo: </string>
    <string name="title_edit">Editar</string>
    <string name="title_delete">Eliminar</string>
    <string name="title_cancelar">Cancelar</string>
    <string name="hint_document">Ingresar Documento</string>
    <string name="hint_nit">Ingresar Nit</string>
    <string name="hint_email">Ingresar Correo Electronico</string>
    <string name="hint_password">Ingresar Contraseña</string>
    <string name="hint_name">Ingresar Nombre</string>
    <string name="hint_lastname">Ingresar Apellido</string>
    <string name="hint_phone">Ingresar Telefono</string>
    <string name="hint_adresss">Ingresar Direccion</string>
    <string name="title_form_new_cliente">Nuevo Cliente</string>
    <string name="title_form_edit_cliente">Editar Cliente</string>
    <string name="title_form_new_provider">Nuevo Proveedor</string>
    <string name="title_form_edit_provider">Editar Proveedor</string>
    <string name="title_repack">Reempacar</string>
    <string name="title_select_clients">Seleccionar cliente</string>
</resources>